--- a/shopcart.css
+++ b/shopcart.css
@@ -21,6 +21,12 @@ html, body {
     min-height: 100%;
 }
 
+
+
+
+.content-section {
+}
+
 .nav ul {
     margin: 0;
 }
@@ -72,15 +78,8 @@ html, body {
     font-size: 8em;
 }
 
-.content-section {
-    margin: 1em;
-}
 
-.container {
-    max-width: 900px;
-    margin: 0 auto;
-    padding: 0 1.5em;
-}
+
 .section-header {
     font-family: "Metal Mania";
     font-weight: normal;
@@ -218,12 +217,18 @@ html, body {
 
 .shop-item-image {
     height: 250px;
+    float: left;
+    width:  250px;
+    height: 250px;
+    object-fit: cover;
+
 }
 
 .shop-item-details {
     display: flex;
     align-items: center;
     padding: 5px;
+   
 }
 
 .shop-item-price {
@@ -280,6 +285,10 @@ html, body {
     width: 75px;
     height: auto;
     border-radius: 10px;
+}
+
+.container {
+   
 }
 
 .btn-danger {
